--- a/src/components/RecycleSection/RecycleSection.module.scss
+++ b/src/components/RecycleSection/RecycleSection.module.scss
@@ -15,6 +15,7 @@
 
 .recycleHeading {
     margin: 0 0 50px;
+    letter-spacing: 0.4px;
 }
 
 .recycleInfo {
